# Downspace

./: README.md
Engine/Engine/: Component.h  ComponentFactory.cpp  GameObject.cpp  GameObject.h  GameObjectPool.cpp  GameObjectPool.h  MyEngine.cpp  MyEngine.h
Engine/Engine/Components/: ComponentPhysicsBody.cpp  ComponentPhysicsBody.h  ComponentRendererMesh.cpp  ComponentRendererMesh.h  ComponentRendererSprite.cpp  ComponentRendererSprite.h
Game/: CMakeLists.txt  main.cpp
Game/Game/: ComponentAmmunition.cpp  ComponentAmmunition.h  ComponentBullet.cpp  ComponentBullet.h  ComponentController.cpp  ComponentController.h  ComponentDestructibleBlock.cpp  ComponentDestructibleBlock.h  ComponentEnemy.cpp  ComponentEnemy.h  ComponentFollowTarget.cpp  ComponentFollowTarget.h  ComponentFootContact.cpp  ComponentFootContact.h  ComponentGem.cpp  ComponentGem.h  ComponentHealthManager.cpp  ComponentHealthManager.h  ComponentHealthManagerWithUI.cpp  ComponentHealthManagerWithUI.h  ComponentLevel.cpp  ComponentLevel.h  ComponentLevelSubsection.cpp  ComponentLevelSubsection.h  ComponentObjectCountUI.cpp  ComponentObjectCountUI.h  ComponentScore.cpp  ComponentScore.h  ComponentShooter.cpp  ComponentShooter.h  ComponentSideContact.cpp  ComponentSideContact.h
Game/data/: scene.json
